--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1402,7 +1402,7 @@
                         android:id="@+id/textView_log_memory"
                         android:layout_width="0dp"
                         android:layout_height="0dp"
-                        android:background="#F0EF0F"
+                        android:background="@drawable/campo_rx"
                         android:textColor="@color/design_default_color_on_secondary"
                         android:textSize="18sp"
                         android:layout_marginBottom="3dp"
@@ -1411,10 +1411,7 @@
                         app:layout_constraintBottom_toTopOf="@id/editText_RX_Call"
                         app:layout_constraintEnd_toStartOf="@id/guideline_125"
                         app:layout_constraintStart_toStartOf="@id/guideline_0"
-                        app:layout_constraintTop_toBottomOf="@id/qrg_indicator"
-
-
-                        />
+                        app:layout_constraintTop_toBottomOf="@id/qrg_indicator" />
 
                     <Button
                         android:id="@+id/button_logger_mem"
@@ -1427,10 +1424,24 @@
                         android:layout_marginTop="60dp"
                         app:layout_constraintStart_toEndOf="@id/editText_TX_Exch"
                         app:layout_constraintTop_toBottomOf="@id/mode_indicator"
+                        app:layout_constraintEnd_toEndOf="parent" />
+
+                    <TextView
+                        android:id="@+id/textView_logger_dupe"
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        android:layout_marginTop="10dp"
+                        android:background="#FAF014"
+                        android:gravity="center"
+                        android:text="DUPE"
+                        android:textStyle="bold"
+                        android:textSize="20sp"
+                        android:visibility="gone"
                         app:layout_constraintEnd_toEndOf="parent"
-
-                         />
-
+                        app:layout_constraintStart_toEndOf="@id/guideline_875"
+                        app:layout_constraintBottom_toTopOf="@+id/editText_TX_Exch"
+                        android:layout_marginBottom="3dp"
+                        app:layout_constraintTop_toBottomOf="@id/mode_indicator" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </ScrollView>
