--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1248,9 +1248,9 @@
                         android:layout_width="130dp"
                         android:layout_height="30dp"
                         android:layout_marginStart="387dp"
-                        android:layout_marginTop="320dp"
+                        android:layout_marginTop="350dp"
                         android:layout_marginEnd="214dp"
-                        android:layout_marginBottom="15dp"
+                        android:layout_marginBottom="0dp"
                         android:background="@drawable/rouded_button"
                         android:gravity="center"
                         android:text="Delete QSO"
@@ -1266,9 +1266,9 @@
                         android:layout_width="130dp"
                         android:layout_height="30dp"
                         android:layout_marginStart="559dp"
-                        android:layout_marginTop="320dp"
+                        android:layout_marginTop="350dp"
                         android:layout_marginEnd="42dp"
-                        android:layout_marginBottom="15dp"
+                        android:layout_marginBottom="0dp"
                         android:background="@drawable/rouded_button"
                         android:gravity="center"
                         android:text="Cancel"
@@ -1390,7 +1390,7 @@
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/recyclerViewQSOs"
                         android:layout_width="0dp"
-                        android:layout_height="120dp"
+                        android:layout_height="130dp"
                         app:layout_constraintBottom_toTopOf="@id/button_log_cancel"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.0"
@@ -1402,12 +1402,14 @@
                         android:id="@+id/textView_log_memory"
                         android:layout_width="0dp"
                         android:layout_height="0dp"
-                        android:background="@drawable/campo_rx"
-                        android:textColor="@color/design_default_color_on_secondary"
+                        android:foreground="?attr/selectableItemBackgroundBorderless"
+                        android:background="@android:color/white"
+                        android:textColor="@android:color/black"
                         android:textSize="18sp"
                         android:layout_marginBottom="3dp"
                         android:gravity="center"
                         android:layout_marginTop="10dp"
+
                         app:layout_constraintBottom_toTopOf="@id/editText_RX_Call"
                         app:layout_constraintEnd_toStartOf="@id/guideline_125"
                         app:layout_constraintStart_toStartOf="@id/guideline_0"
